--- a/nextflow.config
+++ b/nextflow.config
@@ -4,7 +4,7 @@ profiles {
         process.queue = 'lg-n64-256g'
         process.cpus = 16
         process.memory = 64.GB
-        process.time = '24h'
+        process.time = '12h'
     }
     local {
         process.executor = 'local'
@@ -12,4 +12,8 @@ profiles {
         process.memory = 16.GB
         process.time = '24h'
     }
+}
+params {
+    refDir = "${projectDir}/references"
+    // refDir = "/fslustre/labs/ext_mohammedismail_wazim_mayo_ed/references"
 }
